--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "commonjs",
-  "scripts": { "start": "node index.js" },
-  "engines": { "node": ">=18" },
+  "scripts": {
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "@google/genai": "^1.15.0",
+    "@google/generative-ai": "^0.24.1",
     "discord.js": "^14.22.1",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
